src/main/java/com/example/error/ErrorHandler.java
package com.example.error;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.experimental.FieldDefaults;

import java.time.LocalDateTime;
import java.util.Map;

@Data
@NoArgsConstructor
@AllArgsConstructor
@FieldDefaults(level = AccessLevel.PRIVATE)
public class ErrorHandler {
	LocalDateTime timestamp;
	int status;
	String error;
	Map<String, String> message;
	String path;
}